fix icons alignment in the cards of properties section, landing page and userdashboard

--- a/client/src/user/page/LandingPage/OfficeSpaces/OfficeSpaces.css
+++ b/client/src/user/page/LandingPage/OfficeSpaces/OfficeSpaces.css
@@ -166,7 +166,7 @@
   
 .office-spaces-lsitings-cards-icons {
     flex-shrink: 0; /* Prevent icon from shrinking */
-    margin-top: 4px; /* Adjust alignment */
+    /* margin-top: 4px; */
 }
 .office-spaces-listing-bookmark-icons{
     color: #7065f0;
