--- a/client/src/user/page/TopListings/TopListings.css
+++ b/client/src/user/page/TopListings/TopListings.css
@@ -237,7 +237,7 @@
   
   .top-lsitings-cards-icons {
     flex-shrink: 0; /* Prevent icon from shrinking */
-    margin-top: 4px; /* Adjust alignment */
+    /* margin-top: 4px; */
   }
   
   .top-listing-bookmark-icons{
