--- a/client/src/user/page/UserDashBoard/MyProfile/UserProfile.css
+++ b/client/src/user/page/UserDashBoard/MyProfile/UserProfile.css
@@ -150,6 +150,7 @@
 .user-field-icon {
     margin-right: 10px;
     color: #7065f0;
+    margin-bottom: 8px;
 }
 
 .user-field-value {
